<resources>
    <string name="app_name">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="enter_new_task">Enter a new task</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_button">Save</string>
    <string name="task_complete">Task Complete?</string>
    <string name="set_date">Set Due Date:</string>
    <string name="high_priority">High Priority?</string>
</resources>
