<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.siri.simpletodo.EditItemActivity">

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@+id/tvEditTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/edit_task"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSave"
        android:text="@string/save_button"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/setDate"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/task_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/task_complete"
        android:textSize="18sp"
        android:layout_below="@+id/etTaskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/high_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/high_priority"
        android:textSize="18sp"
        android:layout_below="@+id/task_complete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/setDate"
        android:onClick="onSetDate"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/high_priority"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvEditTask"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/setDate"
        android:layout_alignLeft="@+id/high_priority"
        android:layout_alignStart="@+id/high_priority"
        android:layout_alignTop="@+id/setDate"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/setDate"
        android:text="@string/set_date"
        android:gravity="center"
        android:textSize="18sp" />

</RelativeLayout>
